# tldextract-rs

./: Cargo.toml  README.md
.github/workflows/: post-release.yml
examples/: example.rs
tld_extract/: Cargo.toml  README.md
tld_extract/src/: error.rs  lib.rs  suffix_list.rs
tldextract/: Cargo.toml
tldextract-cli/: Cargo.toml
tldextract-cli/src/: cli.rs  lib.rs  main.rs
tldextract-rs/: Cargo.toml  README.md
tldextract-rs/src/: lib.rs  snapshot.rs  suffix_list.rs
tldextract/src/: error.rs  lib.rs  suffix_list.rs
