[package]
name = "tldextract-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tldextract-rs = { path = "../tldextract-rs", version = "0.1.1", features = ["serde", "reqwest"] }
serde_json = "1.0.108"
argh = "0.1.12"
crossterm = "0.27.0"