[package]
name = "tldextract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "native-tls", "native-tls-vendored"], default-features = false }
idna = "0.4.0"
thiserror = "1"